Updates to the documentation. Adds again a simulations module with some more general functions.

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -18,3 +18,9 @@ keywords = "Graphics Processing Unit",
 keywords = "Parallel computing "
 }
 
+@InProceedings{Jelescu2015,
+    author = {Ileana O. Jelescu and Jelle Veraart and Els Fieremans and Dmitry S. Novikov},
+    title = {Caveats of Non-Linear Fitting to Brain Tissue Models of Diffusion},
+    booktitle = {Proceedings of ISMRM 2015},
+    year = {2015}
+}
